--- a/public/css/painel.css
+++ b/public/css/painel.css
@@ -3,334 +3,51 @@ html, body{
     height: 100%;
     margin: 0;
 }
-
-.navbar{
+.container{
+    margin-top: 15%; 
+}
+.col{
     display: flex;
-    flex-direction: row;
-    background-color: #536A74;
-    height: 6%;
     align-items: center;
     justify-content: space-between;
-}
-.topactions{
-    display: flex;
+    height: 200px;
     flex-direction: column;
-    justify-content: space-evenly;
-    align-items: flex-start;
-    width: 20%;
-    height: 20%;
-    margin-top: 20px;
-    margin-left: 10px;
+    border-bottom-width: 1px;
+    border-bottom-color: rgba(0, 0, 0, 0.329);
+    border-bottom-style: solid;
+}
+.copiasinfo{
+    display: flex;
+    flex-direction: column;    
 }
 .userinfos{
-    width: 25%;
     display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    height: 12%;
-    margin-left: 40px;
-    border-style: solid;
-    border-width: 1px;
-    margin-top: 20px;
-}
-.divusertop{
-
-    display: flex;
+    flex-direction: column; 
     align-items: center;
-    justify-content: space-between;
 }
-#textdivusertop{
-    font-size: 1.8vw;
-}
-#textdivuserinfo{
-    font-size: 1.1vw;
-}
-.divuserinfo{
-    display: flex;
-    flex-direction: column;
-    width: 50%;
-}
-#span{
-    font-size: 2vw;
-    color: white;
-    padding-left: 20px;
-}
-#userlist{
-    font-size: 2vw;
-    font-family: 'Gill Sans';
-}
-#btn{
-    color: white;
-    font-size: 1vw;
-    background-color: #536A74;
-    width: 70%;
-    height: 15%;
-    outline: none;
-    text-decoration: none;
-    border-style: solid;
-    border-width: 2px;
-    border-radius: 10px 10px 10px 10px;
-}
-#btn:focus{
+
+.navbar-brand:hover, .nav-link:hover{
     opacity: 0.8;
 }
-#btn:hover{
-    opacity: 0.8;
-}
-#btngeren,#btngerenreti,#btngerenreto,#btngerenreno{
-    font-size: 1vw;
-    width: max-content;
-    background: none;
+#modalClose, #modalCloserela, #modalClosereti, #modalClosereto, #modalClosereno{
     border: none;
-    outline: none;
-    text-decoration: none;
-    color: #536A74;
+    background-color: #3a6475;
+    color: white;
 }
-#btngeren:focus,#btngerenreti:focus,#btngerenreto:focus,#btngerenreno:focus{
-    opacity: 0.7;
+.buttonexit{
+    display: flex; 
+    flex: 2; 
+    justify-content: flex-end;
 }
-#btngeren:hover,#btngerenreti:hover,#btngerenreto:hover,#btngerenreno:hover{
-    opacity: 0.7;
+#recipient-name:focus,#recipient-username:focus,#recipient-password:focus,#recipient-reti:focus,#recipient-reto:focus,#recipient-reno{
+    border-color: #3a6475;
+    box-shadow: none;
 }
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    padding-top: 100px;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0,0,0); 
-    background-color: rgba(0,0,0,0.4); 
+@media screen and (max-width:991px) {
+    .buttonexit{
+        justify-content: flex-start;
+    }
 }
 
-.modal-content {
-    background-color: #fefefe;
-    margin: auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 60%;
-    height: 60%;
-}
-  
-.close {
-    color: #aaaaaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-  
-.close:hover,
-.close:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
-}
-.contents{
-    border-style: solid;
-    border-width: 1px;
-    border-color: black;
-    height: 80%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-direction: column;
-}
-.labelinpt{
-    display: flex;
-    flex-direction: column;
-    width: 30%;
-    height: 12%;
-}
-#spantop{
-    font-size: 2vw;
-}
-#btnformmodal{
-    background-color: #536A74;
-    width: 25%;
-    height: 6%;
-    font-size: 12px;
-    color: white;
-    outline: none;
-    text-decoration: none;
-    border-style: solid;
-}
-#btnformmodal:focus{
-    opacity: 0.8;
-}
-#btnformmodal:hover{
-    opacity: 0.8;
-}
-#inptuser{
-    width: 100%;
-    height: 100%;
-}
-.actions{
-    width: 25%;
-    margin-left: 40px;
-    border-left-style: solid;
-    border-right-style: solid;
-    border-bottom-style: solid;
-    border-left-width: 1px;
-    border-right-width: 1px;
-    border-bottom-width: 1px;
-    background-color: #536A74;
-    display: flex;
-    justify-content: space-around;
-}
-.actionsedit{
-    width: max-content;
-    margin-top: 20px;
-    margin-left: 10px;
-}
-#btnedit{
-    width: 50%;
-    height: 5%;
-    margin-left: 5px;
-    font-size: 0.8vw;
-    justify-content: center;
-    background-color: #536A74;
-    color: white;
-    outline: none;
-    text-decoration: none;
-    border-style: solid;
-}
-#spaninp{
-    align-self: flex-start; 
-    font-size: 13px;
-}
-#btneditpass{
-    width: 75%;
-    height: 5%;
-    margin-left: 5px;
-    font-size: 0.8vw;
-    justify-content: center;
-    background-color: #536A74;
-    color: white;
-    outline: none;
-    text-decoration: none;
-    border-style: solid;
-}
-#btnedit:hover,#btneditpass:hover{
-    opacity: 0.8;
-}
-#logout{
-    width: 3vw;
-    margin-right: 25px;
-    color: white;
-    background: none;
-    outline: none;
-    text-decoration: none;
-    font-size: 1.2vw;
-}
-@media screen and (max-width: 820px){
-    .actionsedit{
-        height: 20%;
-        width: 20%;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-    }
-    #btnedit,#btneditpass{
-        width: 90%;
-        height: 20%;
-        font-size: 1.4vw;
-    }
-    .topactions{
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        align-items: flex-start;
-        width: 20%;
-        height: 20%;
-        margin-top: 20px;
-        margin-left: 10px;
-    }
-    #btn{
-        color: white;
-        font-size: 1.4vw;
-        background-color: #536A74;
-        width: 70%;
-        height: 20%;
-        outline: none;
-        text-decoration: none;
-        border-style: solid;
-        border-width: 2px;
-        border-radius: 10px 10px 10px 10px;
-    }
-    #userlist{
-        font-size: 2.5vw;
-        font-family: 'Gill Sans';
-    }
-    .userinfos{
-        width: 40%;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        height: 20%;
-        margin-left: 40px;
-        border-style: solid;
-        border-width: 1px;
-        margin-top: 20px;
-    }
-    .divuserinfo{
-        display: flex;
-        flex-direction: column;
-        width: 50%;
-    }
-    .divusertop{
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-    }
-    #textdivusertop{
-        font-size: 2.8vw;
-    }
-    #textdivuserinfo{
-        font-size: 2.3vw;
-    }
-    .actions{
-        width: 40%;
-        height: 3%;
-        margin-left: 40px;
-        border-left-style: solid;
-        border-right-style: solid;
-        border-bottom-style: solid;
-        border-left-width: 1px;
-        border-right-width: 1px;
-        border-bottom-width: 1px;
-        background-color: #536A74;
-        display: flex;
-        justify-content: space-around;
-    }
-    #btngeren,#btngerenreti,#btngerenreto,#btngerenreno{
-        font-size: 1.8vw;
-        width: max-content;
-        background: none;
-        border: none;
-        outline: none;
-        text-decoration: none;
-        color: #536A74;
-    }
-    #span{
-        font-size: 2.8vw;
-        color: white;
-        padding-left: 20px;
-    }
-    #logout{
-        width: 3vw;
-        margin-right: 25px;
-        color: white;
-        background: none;
-        outline: none;
-        text-decoration: none;
-        font-size: 2.2vw;
-    }
-@media screen and (max-width: 400px) {
-    #btnformmodal{
-        width: 50%;
-    }
-}
-}
+
+
